--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,13 @@
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="search-img"
         type="text"
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="submit-search" type="submit">Search</button>
     </form>
 
     <div class="gallery"></div>
