final styles and corrections

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
       <button class="submit-search" type="submit">Search</button>
     </form>
 
-    <div class="gallery"></div>
+    <div class="gallery-container">
+      <div class="gallery"></div>
+    </div>
     <button type="button" class="load-more is-hidden">Load more</button>
   </body>
 </html>
